<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:id="@+id/frameLayoutLogin"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".fragment.LoginActivity">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/floatingButtonColor"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="32sp"
            app:fontFamily="@font/lobster_new"
            android:orientation="vertical" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_design"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="@color/floatingButtonColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_design"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="@color/floatingButtonColor"
            app:layout_constraintEnd_toEndOf="@+id/email_text"
            app:layout_constraintStart_toStartOf="@+id/email_text"
            app:layout_constraintTop_toBottomOf="@+id/email_text" />

    <Button
            android:id="@+id/signInBtn"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/button_design"
            android:text="@string/sign_in"
            android:textColor="@color/floatingButtonColor"
            app:layout_constraintEnd_toEndOf="@+id/password_text"
            app:layout_constraintStart_toStartOf="@+id/password_text"
            app:layout_constraintTop_toBottomOf="@+id/password_text" />

    <TextView
            android:id="@+id/sign_up_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/sign_up"
            android:textColor="@color/text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/signInBtn"
            app:layout_constraintStart_toStartOf="@+id/signInBtn" />
</android.support.constraint.ConstraintLayout>