<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/frameLayoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.SignUpFragment">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/floatingButtonColor"
            android:text="@string/app_name"
            android:gravity="center"
            android:textSize="32sp"
            app:fontFamily="@font/lobster_new"
            android:orientation="vertical" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textView2"/>

    <EditText
            android:id="@+id/email_kaydol"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/button_design"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="@color/floatingButtonColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.273"/>

    <EditText
            android:id="@+id/password_kaydol"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_design"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="@color/floatingButtonColor"
            app:layout_constraintEnd_toEndOf="@+id/email_kaydol"
            app:layout_constraintStart_toStartOf="@+id/email_kaydol"
            app:layout_constraintTop_toBottomOf="@+id/email_kaydol" app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
            android:id="@+id/password_kaydol_tekrar"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_design"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="@color/floatingButtonColor"
            app:layout_constraintEnd_toEndOf="@+id/password_kaydol"
            app:layout_constraintStart_toStartOf="@+id/password_kaydol"
            app:layout_constraintTop_toBottomOf="@+id/password_kaydol" app:layout_constraintHorizontal_bias="0.0"/>

    <Button
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_design"
            android:text="@string/kaydol"
            android:textColor="@color/floatingButtonColor"
            app:layout_constraintEnd_toEndOf="@+id/password_kaydol_tekrar"
            app:layout_constraintStart_toStartOf="@+id/password_kaydol_tekrar"
            app:layout_constraintTop_toBottomOf="@+id/password_kaydol_tekrar"
            app:layout_constraintHorizontal_bias="0.496"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView2" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:visibility="invisible" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.266"/>


</android.support.constraint.ConstraintLayout>